# agentX

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  litellm_config.yaml  mcp.docker.json
agentx.d/: config.yaml
agentx.d/commands/: word_count.rhai
agentx.d/skills/: git.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: main.js  style.css
src/: agent.rs  api.rs  code_tool.rs  config.rs  errors.rs  hooks.rs  lib.rs  llm.rs  main.rs  mcp.rs  scripting.rs  storage.rs  tools.rs
tests/: api_test.rs  code_tool_test.rs  hooks_test.rs  integration_test.rs  mcp_test.rs  postgres_test.rs  scripting_test.rs
